--- a/global.yaml
+++ b/global.yaml
@@ -483,3 +483,8 @@ Outputs:
           !Ref 'Stage',
         ],
       ]
+  UserServerTableName:
+    Description: 'The name of the UserServerTable'
+    Value: !Ref UserServerTable
+    Export:
+      Name: !Join [ "-", [ !Ref "AWS::StackName", UserServerTable ] ]
