--- a/global.yaml
+++ b/global.yaml
@@ -17,7 +17,8 @@ Globals:
       Authorizers:
         JacktripGlobalCognitoAuthorizer:
           UserPoolArn:
-            - !Sub 'arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/ca-central-1_20ArNefjM'
+            # - !Sub 'arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/ca-central-1_20ArNefjM'
+            - !GetAtt UserPool.Arn
 
 Parameters:
   WebAppUrl:
@@ -28,6 +29,132 @@ Resources:
     Type: AWS::ApiGateway::Account
     Properties:
       CloudWatchRoleArn: !GetAtt ApiGatewayLogRole.Arn
+  
+  # Cognito Roles
+  # BEGIN USER POOL RESOURCES
+  UserPool:
+  # Created upon user selection
+    Type: AWS::Cognito::UserPool
+    UpdateReplacePolicy: Retain
+    Properties:
+      UserPoolName: !Join ['',[ !Ref 'AWS::StackName', '-', 'cognito-userpool']]
+      UsernameConfiguration:
+        CaseSensitive: false
+      Schema:
+        -
+          Name: email
+          Required: true
+          Mutable: true
+        -
+          Name: family_name
+          Required: true
+          Mutable: true
+        -
+          Name: given_name
+          Required: true
+          Mutable: true
+      
+      AutoVerifiedAttributes: 
+        - email
+      EmailVerificationMessage: "Your verification code is {####}"
+      EmailVerificationSubject: "Your verification code for PCMA-CIC"
+      
+      Policies:
+        PasswordPolicy:
+          MinimumLength: "8"
+          RequireLowercase: true
+          RequireNumbers: true
+          RequireSymbols: true
+          RequireUppercase: true
+      
+      UsernameAttributes: 
+        - email
+      
+      MfaConfiguration: "OFF"
+  UserPoolClientWeb:
+  # Created provide application access to user pool
+  # Depends on UserPool for ID reference
+    Type: "AWS::Cognito::UserPoolClient"
+    Properties:
+      ClientName: cognito_app_clientWeb
+      
+      ReadAttributes: [
+        "email",
+        "family_name",
+        "given_name"
+      ]
+      WriteAttributes: [
+        "email",
+        "family_name",
+        "given_name"
+      ]
+      
+      RefreshTokenValidity: 30
+      UserPoolId: !Ref UserPool
+    DependsOn: UserPool
+  IdentityPool:
+    Type: AWS::Cognito::IdentityPool
+    Properties:
+      IdentityPoolName: !Join ['',[ !Ref 'AWS::StackName', '-', 'cognito-identitypool']]
+      CognitoIdentityProviders:
+        - ClientId:  !Ref UserPoolClientWeb
+          ProviderName: !GetAtt UserPool.ProviderName
+      AllowUnauthenticatedIdentities: true
+  # Create a role for unauthorized access to ddb scan.
+  CognitoUnAuthorizedRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      AssumeRolePolicyDocument: 
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Principal: 
+              Federated: "cognito-identity.amazonaws.com"
+            Action: 
+              - "sts:AssumeRoleWithWebIdentity"
+            Condition:
+              StringEquals: 
+                "cognito-identity.amazonaws.com:aud": !Ref IdentityPool
+              "ForAnyValue:StringLike":
+                  "cognito-identity.amazonaws.com:amr": unauthenticated
+      Policies:
+        - PolicyName: "CognitoUnauthorizedPolicy"
+          PolicyDocument: 
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - 'dynamodb:Scan'
+                Resource: !GetAtt UserServerTable.Arn  
+  # Create a role for authorized access to AWS resources.
+  CognitoAuthorizedRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      AssumeRolePolicyDocument: 
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Principal: 
+              Federated: "cognito-identity.amazonaws.com"
+            Action: 
+              - "sts:AssumeRoleWithWebIdentity"
+            Condition:
+              StringEquals: 
+                "cognito-identity.amazonaws.com:aud": !Ref IdentityPool
+              "ForAnyValue:StringLike":
+                "cognito-identity.amazonaws.com:amr": authenticated
+  IdentityPoolRoleMap:
+  # Created to map Auth and Unauth roles to the identity pool
+  # Depends on Identity Pool for ID ref
+    Type: AWS::Cognito::IdentityPoolRoleAttachment
+    Properties:
+      IdentityPoolId: !Ref IdentityPool
+      Roles:
+          unauthenticated: !GetAtt CognitoUnAuthorizedRole.Arn
+          authenticated: !GetAtt CognitoAuthorizedRole.Arn
+    DependsOn: IdentityPool
+
+
   # Lambdas
   PublishToSnsFunction:
     Type: AWS::Serverless::Function
@@ -212,6 +339,11 @@ Resources:
       FunctionName: !Sub '${AWS::StackName}-websocketAuthorizer-function'
       CodeUri: ./backend/functions/global/websocketAuthorizer
       Handler: websocketAuthorizer.handler
+      Environment:
+        Variables:
+          aud: !Ref UserPoolClientWeb
+          region: !Ref AWS::Region
+          userPoolId: !Ref UserPool
   WebSocketAuthorizerFunctionPermission:
     Type: 'AWS::Lambda::Permission'
     Properties:
@@ -462,6 +594,66 @@ Resources:
       Roles:
         - !Ref JacktripEC2InstanceRole
 
+  # SSM Parameter
+  SSMParamUserServerTableName:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: UserServerTableName
+      Type: String
+      Value: !Ref UserServerTable
+  SSMParamUserPoolId:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: Cognito-UserPoolId
+      Type: String
+      Value: !Ref UserPool
+  SSMParamUserPoolClientWebId:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: Cognito-UserPoolClientWebId
+      Type: String
+      Value: !Ref UserPoolClientWeb
+  SSMParamIdentityPoolId:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: Cognito-IdentityPoolId
+      Type: String
+      Value: !Ref IdentityPool
+  SSMParamWebSocketURL:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: WebSocketURL
+      Type: String
+      Value:
+        !Join [
+          '',
+          [
+            'wss://',
+            !Ref WebSocketApi,
+            '.execute-api.',
+            !Ref 'AWS::Region',
+            '.amazonaws.com/',
+            !Ref 'Stage',
+          ],
+        ]
+  SSMParamActionHandlerURL:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: ActionHandlerURL
+      Type: String
+      Value: 
+        !Join [
+          '',
+          [
+            'https://',
+            !Ref PublishToSnsFunction,
+            '.execute-api.',
+            !Ref 'AWS::Region',
+            '.amazonaws.com/',
+            !Ref 'Stage',
+          ],
+        ]
+
 Outputs:
   StateMachineRoleArn:
     Description: Arn for the Jacktrip State Machine
@@ -483,8 +675,12 @@ Outputs:
           !Ref 'Stage',
         ],
       ]
-  UserServerTableName:
-    Description: 'The name of the UserServerTable'
-    Value: !Ref UserServerTable
-    Export:
-      Name: !Join ['-', [!Ref 'AWS::StackName', UserServerTable]]
+  UserPoolId:
+    Description:  Id for the user pool
+    Value: !Ref UserPool
+  AppClientIDWeb:
+    Description: The user pool app client id for web
+    Value: !Ref UserPoolClientWeb
+  IdentityPoolId:
+    Description:  Id for the user pool
+    Value: !Ref IdentityPool
