--- a/globalv3.yaml
+++ b/globalv3.yaml
@@ -17,7 +17,7 @@ Globals:
       Authorizers:
         JacktripGlobalCognitoAuthorizer:
           UserPoolArn:
-            - !Sub 'arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/ca-central-1_LbasPMLhF'
+            - !GetAtt UserPool.Arn
 
 Parameters:
   WebAppUrl:
@@ -36,6 +36,119 @@ Resources:
     Type: AWS::ApiGateway::Account
     Properties:
       CloudWatchRoleArn: !GetAtt ApiGatewayLogRole.Arn
+
+  # Cognito Roles
+  # BEGIN USER POOL RESOURCES
+  UserPool:
+    # Created upon user selection
+    Type: AWS::Cognito::UserPool
+    UpdateReplacePolicy: Retain
+    Properties:
+      UserPoolName: !Join ['', [!Ref 'AWS::StackName', '-', 'cognito-userpool']]
+      UsernameConfiguration:
+        CaseSensitive: false
+      Schema:
+        - Name: email
+          Required: true
+          Mutable: true
+        - Name: family_name
+          Required: true
+          Mutable: true
+        - Name: given_name
+          Required: true
+          Mutable: true
+
+      AutoVerifiedAttributes:
+        - email
+      EmailVerificationMessage: 'Your verification code is {####}'
+      EmailVerificationSubject: 'Your verification code for PCMA-CIC'
+
+      Policies:
+        PasswordPolicy:
+          MinimumLength: 8
+          RequireLowercase: true
+          RequireNumbers: true
+          RequireSymbols: true
+          RequireUppercase: true
+
+      UsernameAttributes:
+        - email
+
+      MfaConfiguration: 'OFF'
+  UserPoolClientWeb:
+    # Created provide application access to user pool
+    # Depends on UserPool for ID reference
+    Type: 'AWS::Cognito::UserPoolClient'
+    Properties:
+      ClientName: cognito_app_clientWeb
+
+      ReadAttributes: ['email', 'family_name', 'given_name']
+      WriteAttributes: ['email', 'family_name', 'given_name']
+
+      RefreshTokenValidity: 30
+      UserPoolId: !Ref UserPool
+  IdentityPool:
+    Type: AWS::Cognito::IdentityPool
+    Properties:
+      IdentityPoolName:
+        !Join ['', [!Ref 'AWS::StackName', '-', 'cognito-identitypool']]
+      CognitoIdentityProviders:
+        - ClientId: !Ref UserPoolClientWeb
+          ProviderName: !GetAtt UserPool.ProviderName
+      AllowUnauthenticatedIdentities: true
+  # Create a role for unauthorized access to ddb scan.
+  CognitoUnAuthorizedRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: 'Allow'
+            Principal:
+              Federated: 'cognito-identity.amazonaws.com'
+            Action:
+              - 'sts:AssumeRoleWithWebIdentity'
+            Condition:
+              StringEquals:
+                'cognito-identity.amazonaws.com:aud': !Ref IdentityPool
+              'ForAnyValue:StringLike':
+                'cognito-identity.amazonaws.com:amr': unauthenticated
+      Policies:
+        - PolicyName: 'CognitoUnauthorizedPolicy'
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - 'dynamodb:Scan'
+                Resource: !GetAtt UserServerTable.Arn
+  # Create a role for authorized access to AWS resources.
+  CognitoAuthorizedRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Effect: 'Allow'
+            Principal:
+              Federated: 'cognito-identity.amazonaws.com'
+            Action:
+              - 'sts:AssumeRoleWithWebIdentity'
+            Condition:
+              StringEquals:
+                'cognito-identity.amazonaws.com:aud': !Ref IdentityPool
+              'ForAnyValue:StringLike':
+                'cognito-identity.amazonaws.com:amr': authenticated
+  IdentityPoolRoleMap:
+    # Created to map Auth and Unauth roles to the identity pool
+    # Depends on Identity Pool for ID ref
+    Type: AWS::Cognito::IdentityPoolRoleAttachment
+    Properties:
+      IdentityPoolId: !Ref IdentityPool
+      Roles:
+        unauthenticated: !GetAtt CognitoUnAuthorizedRole.Arn
+        authenticated: !GetAtt CognitoAuthorizedRole.Arn
+
   # Lambdas
   ActionHandlerLambda:
     Type: AWS::Serverless::Function
@@ -362,9 +475,9 @@ Resources:
       Handler: websocketAuthorizer.handler
       Environment:
         Variables:
-          aud: 1nfbc9e4rdhmbv6ddocjrj6beu
-          userPoolId: ca-central-1_LbasPMLhF
-          region: ca-central-1
+          aud: !Ref UserPoolClientWeb
+          userPoolId: !Ref UserPool
+          region: !Ref AWS::Region
   WebSocketAuthorizerFunctionPermission:
     Type: 'AWS::Lambda::Permission'
     Properties:
@@ -623,6 +736,66 @@ Resources:
           DeploymentTargets:
             Accounts:
               - !Ref AWS::AccountId
+
+  # SSM Parameter
+  SSMParamUserServerTableName:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: UserServerTableName
+      Type: String
+      Value: !Ref UserServerTable
+  SSMParamUserPoolId:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: Cognito-UserPoolId
+      Type: String
+      Value: !Ref UserPool
+  SSMParamUserPoolClientWebId:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: Cognito-UserPoolClientWebId
+      Type: String
+      Value: !Ref UserPoolClientWeb
+  SSMParamIdentityPoolId:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: Cognito-IdentityPoolId
+      Type: String
+      Value: !Ref IdentityPool
+  SSMParamWebSocketURL:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: WebSocketURL
+      Type: String
+      Value:
+        !Join [
+          '',
+          [
+            'wss://',
+            !Ref WebSocketApi,
+            '.execute-api.',
+            !Ref 'AWS::Region',
+            '.amazonaws.com/',
+            !Ref 'Stage',
+          ],
+        ]
+  SSMParamActionHandlerURL:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: ActionHandlerURL
+      Type: String
+      Value:
+        !Join [
+          '',
+          [
+            'https://',
+            !Ref ServerlessRestApi,
+            '.execute-api.',
+            !Ref 'AWS::Region',
+            '.amazonaws.com/',
+            Prod,
+          ],
+        ]
 
 Outputs:
   StateMachineRoleArn:
