--- a/amplify.yml
+++ b/amplify.yml
@@ -12,13 +12,13 @@ frontend:
         - yarn install
     build:
       commands:
-        - export REACT_APP_USERSERVERTABLENAME=$(aws ssm get-parameter --name /amplify/UserServerTableName --query Parameter.Value --output text)
-        - export REACT_APP_USERPOOLID=$(aws ssm get-parameter --name /amplify/Cognito-UserPoolId --query Parameter.Value --output text)
-        - export REACT_APP_USERPOOLCLIENTWEBID=$(aws ssm get-parameter --name /amplify/Cognito-UserPoolClientWebId --query Parameter.Value --output text)
-        - export REACT_APP_IDENTITYPOOLID=$(aws ssm get-parameter --name /amplify/Cognito-IdentityPoolId --query Parameter.Value --output text)
-        - export REACT_APP_AWS_API_BASE=$(aws ssm get-parameter --name /amplify/ActionHandlerURL --query Parameter.Value --output text)/actions
-        - export REACT_APP_AWS_USERDB_BASE=$(aws ssm get-parameter --name /amplify/ActionHandlerURL --query Parameter.Value --output text)
-        - export REACT_APP_WS_BASE=$(aws ssm get-parameter --name /amplify/WebSocketURL --query Parameter.Value --output text)
+        - REACT_APP_USERSERVERTABLENAME=$(aws ssm get-parameter --name /amplify/UserServerTableName --query Parameter.Value --output text)
+        - REACT_APP_USERPOOLID=$(aws ssm get-parameter --name /amplify/Cognito-UserPoolId --query Parameter.Value --output text)
+        - REACT_APP_USERPOOLCLIENTWEBID=$(aws ssm get-parameter --name /amplify/Cognito-UserPoolClientWebId --query Parameter.Value --output text)
+        - REACT_APP_IDENTITYPOOLID=$(aws ssm get-parameter --name /amplify/Cognito-IdentityPoolId --query Parameter.Value --output text)
+        - REACT_APP_AWS_API_BASE=$(aws ssm get-parameter --name /amplify/ActionHandlerURL --query Parameter.Value --output text)/actions
+        - REACT_APP_AWS_USERDB_BASE=$(aws ssm get-parameter --name /amplify/ActionHandlerURL --query Parameter.Value --output text)
+        - REACT_APP_WS_BASE=$(aws ssm get-parameter --name /amplify/WebSocketURL --query Parameter.Value --output text)
         - yarn run build
   artifacts:
     baseDirectory: build
