--- a/global.yaml
+++ b/global.yaml
@@ -22,12 +22,12 @@ Globals:
 Parameters:
   WebAppUrl:
     Type: String
-    Default: 'http://localhost:3000'
+    Default: '*'
   ExecutionRoleName:
     Type: String
-    Default: stacksets-execSubAccount-173513177120
-  StackSetTemplateUrl:
-    Type: String
+    Default: AWSCloudFormationStackSetExecutionRole
+  # StackSetTemplateUrl:
+  #   Type: String
   DeployedRegion:
     Type: CommaDelimitedList
     Default: ca-central-1, us-west-2
@@ -58,12 +58,10 @@ Resources:
         - Name: given_name
           Required: true
           Mutable: true
-
       AutoVerifiedAttributes:
         - email
       EmailVerificationMessage: 'Your verification code is {####}'
       EmailVerificationSubject: 'Your verification code for PCMA-CIC'
-
       Policies:
         PasswordPolicy:
           MinimumLength: 8
@@ -71,11 +69,10 @@ Resources:
           RequireNumbers: true
           RequireSymbols: true
           RequireUppercase: true
-
       UsernameAttributes:
         - email
-
       MfaConfiguration: 'OFF'
+
   UserPoolClientWeb:
     # Created provide application access to user pool
     # Depends on UserPool for ID reference
@@ -725,7 +722,7 @@ Resources:
       StackSetName: !Sub ${AWS::StackName}-RegionalStackSet
       ExecutionRoleName: !Ref ExecutionRoleName
       PermissionModel: SELF_MANAGED
-      TemplateURL: !Ref StackSetTemplateUrl
+      # TemplateURL: !Ref StackSetTemplateUrl
       Capabilities:
         - CAPABILITY_NAMED_IAM
         - CAPABILITY_AUTO_EXPAND
@@ -737,6 +734,146 @@ Resources:
           DeploymentTargets:
             Accounts:
               - !Ref AWS::AccountId
+      TemplateBody: |
+        AWSTemplateFormatVersion: '2010-09-09'
+        Transform: AWS::Serverless-2016-10-31
+        Description: 'CloudFormation Template for instantiating Jacktrip servers in AWS'
+
+        Globals:
+          Function:
+            Runtime: nodejs14.x
+
+        Parameters:
+          ContactWebSocketFunctionName:
+            Type: String
+
+        Resources:
+          EC2SecurityGroup:
+            Type: AWS::EC2::SecurityGroup
+            Properties:
+              GroupDescription: Security Group for all EC2 instances running Jacktrip
+              VpcId: !Ref RegionalVpc
+              SecurityGroupIngress:
+                - IpProtocol: icmp
+                  FromPort: 8
+                  ToPort: -1
+                  CidrIp: 0.0.0.0/0
+                - IpProtocol: tcp
+                  FromPort: 0
+                  ToPort: 65535
+                  CidrIp: 0.0.0.0/0
+                - IpProtocol: udp
+                  FromPort: 0
+                  ToPort: 65535
+                  CidrIp: 0.0.0.0/0
+              SecurityGroupEgress:
+                - Description: Allow all outbound traffic
+                  IpProtocol: '-1'
+                  CidrIp: 0.0.0.0/0
+
+          RegionalVpc:
+            Type: AWS::EC2::VPC
+            Properties:
+              CidrBlock: 172.18.0.0/16
+              EnableDnsSupport: true
+              EnableDnsHostnames: true
+              Tags:
+                - Key: Name
+                  Value: !Join ['', [!Ref 'AWS::StackName', '-VPC']]
+
+          InternetGateway:
+            Type: AWS::EC2::InternetGateway
+            DependsOn: RegionalVpc
+
+          AttachGateway:
+            Type: AWS::EC2::VPCGatewayAttachment
+            Properties:
+              VpcId: !Ref RegionalVpc
+              InternetGatewayId: !Ref InternetGateway
+
+          PublicSubnet:
+            Type: AWS::EC2::Subnet
+            Properties:
+              CidrBlock: !GetAtt RegionalVpc.CidrBlock
+              VpcId: !Ref RegionalVpc
+              AvailabilityZone: !Select [0, !GetAZs '']
+              MapPublicIpOnLaunch: true
+              Tags:
+                - Key: Name
+                  Value: !Sub ${AWS::StackName}-PublicSubnet
+
+          PublicRouteTable:
+            Type: AWS::EC2::RouteTable
+            Properties:
+              VpcId: !Ref RegionalVpc
+
+          PublicRoute: # Public route table has direct routing to IGW:
+            Type: AWS::EC2::Route
+            DependsOn: AttachGateway
+            Properties:
+              RouteTableId: !Ref PublicRouteTable
+              DestinationCidrBlock: 0.0.0.0/0
+              GatewayId: !Ref InternetGateway
+
+          PublicSubnetRouteTableAssociation:
+            Type: AWS::EC2::SubnetRouteTableAssociation
+            Properties:
+              RouteTableId: !Ref PublicRouteTable
+              SubnetId: !Ref PublicSubnet
+
+          RunJacktripDocument:
+            Type: AWS::SSM::Document
+            Properties:
+              Content:
+                schemaVersion: '2.2'
+                description: 'Run Jacktrip on EC2 instance'
+                parameters:
+                  samplingRate:
+                    type: String
+                    description: 'Sampling rate parameter for Jacktrip (Required)'
+                  bufferSize:
+                    type: String
+                    description: 'Buffer size parameter for Jacktrip (Required)'
+                mainSteps:
+                  - action: aws:runShellScript
+                    name: runCommands
+                    inputs:
+                      runCommand:
+                        - 'killall jackd && killall jacktrip'
+                        - 'jackd -R -t500 -ddummy -r{{samplingRate}} -p{{bufferSize}} &'
+                        - 'cd /home/ubuntu'
+                        - './jacktrip -S &'
+                        - 'echo "Run Jacktrip Successful"'
+              DocumentType: Command
+
+          # SSM Parameter
+          SubnetIdSSM:
+            Type: AWS::SSM::Parameter
+            Properties:
+              Name: JacktripSubnetId
+              Type: String
+              Value: !Ref PublicSubnet
+
+          SecurityGroupIdSSM:
+            Type: AWS::SSM::Parameter
+            Properties:
+              Name: JacktripSecurityGroupId
+              Type: String
+              Value: !Ref EC2SecurityGroup
+
+          DocumentNameSSM:
+            Type: AWS::SSM::Parameter
+            Properties:
+              Name: JacktripDocumentName
+              Type: String
+              Value: !Ref RunJacktripDocument
+
+          ContactWebsocketLambdaSSM:
+            Type: AWS::SSM::Parameter
+            Properties:
+              Name: ContactWebSocketFunctionName
+              Type: String
+              Value: !Ref ContactWebSocketFunctionName
 
   # SSM Parameter
   SSMParamUserServerTableName:
@@ -748,25 +885,25 @@ Resources:
   SSMParamUserPoolId:
     Type: AWS::SSM::Parameter
     Properties:
-      Name: Cognito-UserPoolId
+      Name: /amplify/Cognito-UserPoolId
       Type: String
       Value: !Ref UserPool
   SSMParamUserPoolClientWebId:
     Type: AWS::SSM::Parameter
     Properties:
-      Name: Cognito-UserPoolClientWebId
+      Name: /amplify/Cognito-UserPoolClientWebId
       Type: String
       Value: !Ref UserPoolClientWeb
   SSMParamIdentityPoolId:
     Type: AWS::SSM::Parameter
     Properties:
-      Name: Cognito-IdentityPoolId
+      Name: /amplify/Cognito-IdentityPoolId
       Type: String
       Value: !Ref IdentityPool
   SSMParamWebSocketURL:
     Type: AWS::SSM::Parameter
     Properties:
-      Name: WebSocketURL
+      Name: /amplify/WebSocketURL
       Type: String
       Value:
         !Join [
@@ -783,7 +920,7 @@ Resources:
   SSMParamActionHandlerURL:
     Type: AWS::SSM::Parameter
     Properties:
-      Name: ActionHandlerURL
+      Name: /amplify/ActionHandlerURL
       Type: String
       Value:
         !Join [
