--- a/global.yaml
+++ b/global.yaml
@@ -727,8 +727,8 @@ Resources:
         - CAPABILITY_NAMED_IAM
         - CAPABILITY_AUTO_EXPAND
       Parameters:
-        - ParameterKey: ContactWebSocketFunctionName
-          ParameterValue: !Ref ContactWebSocketLambda
+        - ParameterKey: CentralRegion
+          ParameterValue: !Ref AWS::Region
       StackInstancesGroup:
         - Regions: !Ref DeployedRegion
           DeploymentTargets:
@@ -744,27 +744,25 @@ Resources:
             Runtime: nodejs14.x
 
         Parameters:
-          ContactWebSocketFunctionName:
+          CentralRegion:
             Type: String
 
         Resources:
           EC2SecurityGroup:
             Type: AWS::EC2::SecurityGroup
             Properties:
-              GroupDescription: Security Group for all EC2 instances running Jacktrip
+              GroupDescription: Security Group for all EC2 instances running Jacktrip (see Network Ports at https://ccrma.stanford.edu/docs/common/IETF.html)
               VpcId: !Ref RegionalVpc
               SecurityGroupIngress:
-                - IpProtocol: icmp
-                  FromPort: 8
-                  ToPort: -1
+                - IpProtocol: udp
+                  Description: Allows udp connection to port 61002 to 62000 for each client connection
+                  FromPort: 61002
+                  ToPort: 62000
                   CidrIp: 0.0.0.0/0
                 - IpProtocol: tcp
-                  FromPort: 0
-                  ToPort: 65535
-                  CidrIp: 0.0.0.0/0
-                - IpProtocol: udp
-                  FromPort: 0
-                  ToPort: 65535
+                  Description: Allows tcp ingress on port 4464 for client handshake
+                  FromPort: 4464
+                  ToPort: 4464
                   CidrIp: 0.0.0.0/0
               SecurityGroupEgress:
                 - Description: Allow all outbound traffic
@@ -868,12 +866,13 @@ Resources:
               Type: String
               Value: !Ref RunJacktripDocument
 
-          ContactWebsocketLambdaSSM:
+          JacktripCentralRegion:
             Type: AWS::SSM::Parameter
             Properties:
-              Name: ContactWebSocketFunctionName
+              Name: JacktripCentralRegion
               Type: String
-              Value: !Ref ContactWebSocketFunctionName
+              Value: !Ref CentralRegion
+        # END of regional.yaml
 
   # SSM Parameter
   SSMParamUserServerTableName:
@@ -934,6 +933,19 @@ Resources:
             Prod,
           ],
         ]
+  SSMDeployedRegion:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: /amplify/RegionSelection
+      Type: StringList
+      Value: !Join [',', !Ref DeployedRegion]
+
+  ContactWebsocketLambdaSSM:
+    Type: AWS::SSM::Parameter
+    Properties:
+      Name: ContactWebSocketFunctionName
+      Type: String
+      Value: !Ref ContactWebSocketLambda
 
 Outputs:
   StateMachineRoleArn:
